Fixed bug with selects & made cards wrapable

--- a/src/components/ArchiveCard/archive-card-styles.css
+++ b/src/components/ArchiveCard/archive-card-styles.css
@@ -3,7 +3,7 @@
   background-color: #fff;
   color: #000;
   border-radius: 4px;
-  margin-bottom: 20px;
+  margin: 0 10px 20px 10px;
   height: fit-content;
 }
 .archive-card-img {
